[gd_scene load_steps=16 format=3 uid="uid://bqpkadyx7bhym"]

[ext_resource type="Script" path="res://tutorial.gd" id="1_uqrdl"]
[ext_resource type="PackedScene" uid="uid://bkxdgbd3ey2vu" path="res://Player.tscn" id="1_yenv3"]
[ext_resource type="PackedScene" uid="uid://b0g45651r3fgm" path="res://UI.tscn" id="3_plqqc"]
[ext_resource type="Texture2D" uid="uid://h404ywpktufw" path="res://3dmodels/textures/dark.png" id="4_uc8av"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_3d.gd" id="5_ei44l"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="6_6fhai"]
[ext_resource type="Script" path="res://camera_manager.gd" id="7_ql5mo"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_cqh7r"]
sky_top_color = Color(0.27897, 0.617334, 1, 1)

[sub_resource type="Sky" id="Sky_44i8k"]
sky_material = SubResource("ProceduralSkyMaterial_cqh7r")

[sub_resource type="Environment" id="Environment_dql7x"]
sky = SubResource("Sky_44i8k")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_61n16"]
albedo_texture = ExtResource("4_uc8av")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_mncw4"]
size = Vector2(500, 500)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_22jyk"]
data = PackedVector3Array(250, 0, 250, -250, 0, 250, 250, 0, -250, -250, 0, 250, -250, 0, -250, 250, 0, -250)

[sub_resource type="Resource" id="Resource_68ocb"]
script = ExtResource("6_6fhai")
duration = 0.0
transition = 0
ease = 0

[sub_resource type="PrismMesh" id="PrismMesh_qpyna"]
left_to_right = 1.0
size = Vector3(9.665, 8.65, 7.925)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_uqrdl")

[node name="Node" type="Node" parent="."]

[node name="Player" parent="." instance=ExtResource("1_yenv3")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dql7x")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.211923, 0.896387, -0.38933, 0.113905, 0.373008, 0.92081, 0.970626, -0.239488, -0.0230538, 0, 7.37779, 0)
shadow_enabled = true

[node name="UI" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_plqqc")]
player = NodePath("../Player")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.524337, 0)
material_override = SubResource("StandardMaterial3D_61n16")
mesh = SubResource("PlaneMesh_mncw4")

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_22jyk")

[node name="PhantomCamera3D" type="Node3D" parent="."]
transform = Transform3D(-0.226329, -0.406175, 0.885323, 0.0345361, 0.904991, 0.424027, -0.973438, 0.126545, -0.190798, 41.8854, 23.0327, 91.7846)
script = ExtResource("5_ei44l")
look_at_mode = 2
tween_resource = SubResource("Resource_68ocb")
tween_on_load = false

[node name="CameraManager" type="Node3D" parent="." node_paths=PackedStringArray("camera_01")]
script = ExtResource("7_ql5mo")
camera_01 = NodePath("../PhantomCamera3D")

[node name="Deco" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Deco"]
transform = Transform3D(0.217377, 0, 0.976088, 0, 1, 0, -0.976088, 0, 0.217377, -66.5737, 0, 17.313)
mesh = SubResource("PrismMesh_qpyna")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Deco"]
transform = Transform3D(0.342332, 0, -0.939579, 0, 1, 0, 0.939579, 0, 0.342332, -26.2956, 0, -163.548)
mesh = SubResource("PrismMesh_qpyna")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Deco"]
transform = Transform3D(0.342332, 0, -0.939579, 0, 1, 0, 0.939579, 0, 0.342332, -4.40639, 0, 98.2589)
mesh = SubResource("PrismMesh_qpyna")

[connection signal="ball_shot" from="Player" to="UI" method="_on_player_ball_shot"]
[connection signal="ball_shot" from="Player" to="CameraManager" method="_on_player_ball_shot"]
[connection signal="player_moved" from="Player" to="CameraManager" method="_on_player_player_moved"]
[connection signal="PANGYA" from="UI" to="Player" method="_on_ui_pangya"]
